# CLion2017_2Demo

./: CMakeLists.txt  README.md  main.cpp
Clang-Tidy/: CMakeLists.txt  google_checks.cpp  modernize.cpp
Code_analysis/: CMakeLists.txt  parameters_pack.cpp  unused_var.cpp  va_macros_support.cpp
debug/: CMakeLists.txt  long_array.cpp  simple_qt_app.cpp
misc/: CMakeLists.txt  cancelable_goto.cpp  not_in_project.cpp
